--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 
             <li><a href="./portabout.html">About Us</a></li>
 
-            <li><a href="./poserve.html">Services</a></li>
+            <li><a href="./porserve.html">Services</a></li>
 
             <li><a href="./poskill.html">Skills</a></li>
 
-            <li><a href="./poserve.html#contact-me">Contact Us</a></li></ul>
+            <li><a href="./porserve.html#contact-me">Contact Us</a></li></ul>
 
        <div class="menu">
 
